# improved-octo-guacamole

./: .env  .gitignore  README.md  bacon.toml  dev.env  release.env
crates/canoe/: Cargo.toml
crates/canoe/src/: app.rs  config.rs  controller.rs  db.rs  events.rs  lib.rs  main.rs  model.rs
db/: schema.sql
migrations/: 20230901130035_initial.sql  20230901165531_add-year-to-funds.sql  20230901211004_add-fake-funds.sql
